Completed for local MS SQL Server

--- a/CRUDAssessment/appsettings.json
+++ b/CRUDAssessment/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "CRUDAssessmentCS": "server=TEE-LEGION; database=testDB; Integrated Security=True; MultipleActiveResultSets=True; TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
